# logger

./: CMakeLists.txt  conanfile.py
example/: CMakeLists.txt  example.cpp
fmt_example/: CMakeLists.txt  fmt_example.cpp
include/: log_manager.hpp
spdlog_example/: CMakeLists.txt  spdlog_example.cpp
src/: logger.cpp
